--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.11.11",
     "postcss": "^8.4.38",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
