--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,11 @@ jobs:
     
     - uses: oven-sh/setup-bun@v1
 
+    - name: Set up Git
+      run: |
+        git config --global user.email "d.a.roor@uva.nl"
+        git config --global user.name "D.A. Roor"
+
     - name: Install dependencies
       run: bun install
 
