--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Upload pages artifacts
       uses: actions/upload-artifact@v2
       with:
+        name: github-pages
         path: dist
   
   deploy:
