refactor: Update GitHub Pages deployment and permissions in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       run: bun run build
 
     - name: Upload pages artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-pages-artifact@v2
       with:
         name: github-pages
         path: dist
