--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.11.11",
     "postcss": "^8.4.38",
-    "qrcode.react": "^3.1.0",
+    "qr-code-styling": "^1.6.0-rc.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.4"
