chore(deps): Add @r2wc/react-to-web-component to be able to convert React components to Web components

--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:web": "tsc && vite build --mode web",
     "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@r2wc/react-to-web-component": "^2.0.3",
     "autoprefixer": "^10.4.19",
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.11.11",
