--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/upload-pages-artifact@v2
       with:
         name: github-pages
-        path: dist
+        path: dist/react
   
   deploy:
     runs-on: ubuntu-latest
