--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qr-code-styling": "^1.6.0-rc.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.5.3",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
